--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "quill": "1.3.7",
         "rxjs": "7.5.6",
         "tslib": "2.4.0",
+        "xlsx": "^0.18.5",
         "zone.js": "0.11.8"
     },
     "devDependencies": {
